testCamping/main/default/objects/Dedupe_Candidate__c/Dedupe_Candidate__c.object-meta.xml
<CustomObject>
    <label>Dedupe Candidate</label>
    <nameField>
        <label>Dedupe Candidate Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dedupe Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>