testCamping/main/default/objects/Dedupe_Candidate__c/fields/Dedupe_Match__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Match__c</fullName>
    <label>Dedupe Match</label>
    <referenceTo>Dedupe_Match__c</referenceTo>
    <relationshipLabel>Dedupe Candidates</relationshipLabel>
    <relationshipName>Dedupe_Candidates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>