testCamping/main/default/objects/Dedupe_Candidate__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>