testCamping/main/default/objects/Dedupe_Candidate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>